--- a/src/grep/Makefile
+++ b/src/grep/Makefile
@@ -5,14 +5,11 @@ COM=../common/
 
 grep: main
 
-main: s21_grep.o com_line_fun.o
-	$(CC) $(CFLAGS) s21_grep.o com_line_fun.o -o $(GREP)s21_grep
+main: s21_grep.o
+	$(CC) $(CFLAGS) s21_grep.o -o $(GREP)s21_grep
 
-s21_grep.o: $(GREP)s21_grep.c $(GREP)s21_grep.h $(COM)com_line_fun.h
+s21_grep.o: $(GREP)s21_grep.c $(GREP)s21_grep.h
 	$(CC) $(CFLAGS) -c s21_grep.c
-
-com_line_fun.o: $(COM)com_line_fun.c $(COM)com_line_fun.h
-	$(CC) $(CFLAGS) -c $(COM)com_line_fun.c 
 
 clean: 
 	rm -rf *.o $(GREP)s21_grep
