--- a/src/cat/Makefile
+++ b/src/cat/Makefile
@@ -1,18 +1,17 @@
 CC=gcc
 CFLAGS=-std=c11 -Wall -Werror -Wextra
 CAT=../cat/
-COM=../common/
 
 cat: main
 
-main: s21_cat.o com_line_fun.o
-	$(CC) $(CFLAGS) s21_cat.o com_line_fun.o -o $(CAT)s21_cat
+main: s21_cat.o pars_line_fun.o
+	$(CC) $(CFLAGS) s21_cat.o pars_line_fun.o -o $(CAT)s21_cat
 
-s21_cat.o: $(CAT)s21_cat.c $(CAT)s21_cat.h $(COM)com_line_fun.h
+s21_cat.o: $(CAT)s21_cat.c $(CAT)s21_cat.h $(CAT)pars_line_fun.h
 	$(CC) $(CFLAGS) -c s21_cat.c
 
-com_line_fun.o: $(COM)com_line_fun.c $(COM)com_line_fun.h
-	$(CC) $(CFLAGS) -c $(COM)com_line_fun.c 
+pars_line_fun.o: $(CAT)pars_line_fun.c $(CAT)pars_line_fun.h
+	$(CC) $(CFLAGS) -c $(CAT)pars_line_fun.c 
 
 clean: 
 	rm -rf *.o $(CAT)s21_cat
